# django_comment

./: .gitignore  Dockerfile  Makefile  README.md  default.env  docker-compose.yml  pyproject.toml
compose/nginx/: nginx.conf
requirements/: dev.txt  main.txt
src/: manage.py
src/comments/: models.py  serializers.py  urls.py  views.py
src/comments/migrations/: 0001_initial.py  0002_alter_comment_home_page.py  0003_alter_comment_text.py
src/django_comments/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/templates/: demo_recaptcha.html
